--- a/index.html
+++ b/index.html
@@ -1,39 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>William Connelly</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300|Raleway:400,800" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Archivo:400,700" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" 
     integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" 
     crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Archivo:700" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="static/css/style.css">
-  </head>
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+    <title>William Connelly</title>
+    <link rel="stylesheet" href="static/css/style.css">
+  </head> 
   <body>
-    <div class="container">
-      <nav class="z-depth-0">
-        <div class="nav-wrapper">
-          <ul id="nav-mobile" class="right">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Me</a></li>
-            <li><a href="projects.html">Projects</a></li>
-          </ul>
-        </div>
+    <div class="landing-wrapper">
+      <nav class="nav-buttons">
+        <a href="index.html">Home</a>
+        <a href="about.html">About Me</a>
+        <a href="projects.html">Projects</a>
       </nav>
-      <h2>William Connelly</h2>
-      <h5>Full-Stack Web Developer</h5>
-      <span style="font-size: 3em;">
-        <a href="https://github.com/Williamconnelly"><i class="fab fa-github landing-icon"></i></a>
-        <a href="https://www.linkedin.com/in/williamrconnelly/"><i class="fab fa-linkedin landing-icon"></i></a>
-        <a href="mailto:williamconnelly.dev@gmail.com"><i class="fas fa-envelope-square landing-icon"></i></a>
-        <a href="static/img/WilliamConnelly-Resume.pdf" target="_blank"><i class="fas fa-file-download 
-        landing-icon tooltipped" data-position="bottom" data-tooltip="Resume"></i></a>
-      </span>
+      <div class="landing-content">
+        <h1>William Connelly</h1>
+        <h2>Full-Stack Web Developer</h2>
+        <span style="font-size: 3em;">
+          <a href="https://github.com/Williamconnelly" target="_blank"><i class="fab fa-github landing-icon"></i></a>
+          <a href="https://www.linkedin.com/in/williamrconnelly/" target="_blank"><i class="fab fa-linkedin landing-icon"></i></a>
+          <a href="mailto:williamconnelly.dev@gmail.com"><i class="fas fa-envelope-square landing-icon"></i></a>
+          <a href="static/resume/WilliamConnelly-Resume.pdf" target="_blank"><i class="fas fa-file-download 
+          landing-icon"></i></a>
+        </span>
+      </div>
+      <div class="overlay"></div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
-    <script src="static/js/script.js"></script>
+    <footer class="footer">
+      <p>© 2018 William Connelly</p>
+      <span style="font-size: 1.5em;">
+        <a href="https://github.com/Williamconnelly" target="_blank"><i class="fab fa-github landing-icon"></i></a>
+        <a href="https://www.linkedin.com/in/williamrconnelly/" target="_blank"><i class="fab fa-linkedin landing-icon"></i></a>
+        <a href="mailto:williamconnelly.dev@gmail.com"><i class="fas fa-envelope-square landing-icon"></i></a>
+        <a href="static/resume/WilliamConnelly-Resume.pdf" target="_blank"><i class="fas fa-file-download 
+        landing-icon"></i></a>
+      </span>
+    </footer>
+  <script src="static/js/script.js"></script>
   </body>
 </html>
