--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
               <h2>Danmaku</h2>
             </div>
             <div class="project-buttons">
-              <a class="project-button" href="/projects/danmaku">DETAILS</a>
+              <a class="project-button" href="projects/danmaku.html">DETAILS</a>
               <a class="project-button" href="https://williamconnelly.github.io/danmaku-project/" target="_blank">LIVE SITE</a>
               <a class="project-button" href="https://github.com/Williamconnelly/danmaku-project" target="_blank">CODE</a>
             </div>
@@ -59,7 +59,7 @@
               <h2>Good Market</h2>
             </div>
             <div class="project-buttons">
-              <a class="project-button" href="/projects/goodmarket">DETAILS</a>
+              <a class="project-button" href="projects/goodmarket.html">DETAILS</a>
               <a class="project-button" href="https://good-market.herokuapp.com/" target="_blank">LIVE SITE</a>
               <a class="project-button" href="https://github.com/Williamconnelly/goodmarket" target="_blank">CODE</a>
             </div>
@@ -84,7 +84,7 @@
               <h2>MovieList</h2>
             </div>
             <div class="project-buttons">
-              <a class="project-button" href="/projects/movielist">DETAILS</a>
+              <a class="project-button" href="projects/movielist.html">DETAILS</a>
               <a class="project-button" href="https://express-movielist.herokuapp.com/" target="_blank">LIVE SITE</a>
               <a class="project-button" href="https://github.com/Williamconnelly/movielist" target="_blank">CODE</a>
             </div>
@@ -108,7 +108,7 @@
               <h2>Punch Card</h2>
             </div>
             <div class="project-buttons">
-              <a class="project-button" href="/projects/punchcard">DETAILS</a>
+              <a class="project-button" href="projects/punchcard.html">DETAILS</a>
               <a class="project-button" href="https://punch-card.herokuapp.com/" target="_blank">LIVE SITE</a>
               <a class="project-button" href="https://github.com/Williamconnelly/punch-card" target="_blank">CODE</a>
             </div>
